[gd_scene load_steps=4 format=3 uid="uid://buetvmo3m42v5"]

[ext_resource type="Script" uid="uid://bhx6thphvfolw" path="res://Scripts/PuyoPuyo/puyo_manager.gd" id="1_sea3v"]
[ext_resource type="Texture2D" uid="uid://dub51x4lfi0n0" path="res://Art/combat screen elements/puyo-skull.png" id="3_4g3bt"]
[ext_resource type="PackedScene" uid="uid://j1dwvidyapp4" path="res://Scenes/PuyoPuyo/puyo_game_manager.tscn" id="4_qdif2"]

[node name="PuyoManager" type="Node2D" node_paths=PackedStringArray("game_manager")]
script = ExtResource("1_sea3v")
game_manager = NodePath("PuyoGameManager")

[node name="PuyoGameManager" parent="." instance=ExtResource("4_qdif2")]

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.707)
position = Vector2(124, 26)
scale = Vector2(2.11111, 2)
texture = ExtResource("3_4g3bt")

[connection signal="chain_ended" from="PuyoGameManager" to="." method="_on_grid_manager_chain_ended"]
[connection signal="chain_stage_pop" from="PuyoGameManager" to="." method="chain_stage_popped"]
[connection signal="junk_created" from="PuyoGameManager" to="." method="_on_grid_manager_junk_created"]
[connection signal="junk_popped" from="PuyoGameManager" to="." method="_on_grid_manager_junk_created"]
[connection signal="life_loss" from="PuyoGameManager" to="." method="lose_life"]
[connection signal="player_created" from="PuyoGameManager" to="." method="_on_player_created"]
[connection signal="turn_tick" from="PuyoGameManager" to="." method="end_player_turn"]
[connection signal="update_puyo_pool" from="PuyoGameManager" to="." method="_on_puyo_game_manager_update_puyo_pool"]
